<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_first_page"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo_first_page"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/logo_first_page" />
    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_10sdp"

        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layou_factory"
            android:gravity="center"
             android:layout_weight=".5"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:layout_weight=".7"
                android:id="@+id/factoryImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/sooady_factores"
                android:src="@drawable/factory"
                android:padding="@dimen/_20sdp"
                 />

            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sooady_factores"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:background="@drawable/back3"
             android:id="@+id/productesImage_layout"
            android:gravity="center"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
             android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:id="@+id/productesImages"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/prodectes"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/industrial_robot" />

            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:text="@string/prodectes"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="17sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
         android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_moassa_register"
            android:gravity="center"
            android:layout_weight=".5"
            android:background="@drawable/back4"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
             android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:id="@+id/moassa_registerImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/singel_register"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:scaleType="fitCenter"

                android:src="@drawable/team" />
            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:text="@string/moassa_register"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_singel_register"
            android:gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight=".5"
            android:background="@drawable/bac2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
             android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:id="@+id/singil_register_Image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/singel_register"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:scaleType="fitCenter"

                android:src="@drawable/man1" />

            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:text="@string/singel_register"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="17sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_supports"
            android:gravity="center"
            android:layout_weight=".5"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:id="@+id/over_view_factorsImage"
                android:contentDescription="@string/support"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:src="@drawable/support_tools" />

            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:text="@string/support"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
              android:id="@+id/layot_factory_parts"
            android:gravity="center"
            android:layout_weight=".5"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="0dp"
            android:background="@drawable/back3"
            android:layout_height="@dimen/_130sdp"
            android:adjustViewBounds="true"
             android:orientation="vertical"
            android:scaleType="fitCenter">


            <ImageView
                android:id="@+id/productesImage"
                android:contentDescription="@string/factory_parts"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/industrial_robot_t" />

            <com.example.shaymaa.finalproject.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                android:text="@string/factory_parts"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>