<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:background="@drawable/bg_first_page"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        >


        <ImageView
            android:id="@+id/go_back"
            android:layout_gravity="end"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:padding="@dimen/_4sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/go_back"
            android:contentDescription="@string/bake_icon" />

        <com.example.shaymaa.finalproject.others.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:text="المصانع السعودية"
            android:id="@+id/wasf_titel"
            />

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/imageView"
        android:background="@drawable/logo_first_page"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
<LinearLayout
    android:layout_marginTop="@dimen/_15sdp"
    android:layout_gravity="center"
    android:gravity="center"
    android:id="@+id/liner_C"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_weight=".5"
        android:id="@+id/layou_over_all_factores"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/back"
        android:orientation="vertical"
        android:scaleType="fitCenter"
       >


        <ImageView
            android:id="@+id/productesImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/back"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"

            android:src="@drawable/factory" />

        <com.example.shaymaa.finalproject.others.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:text="@string/over_view_all_factores"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>




    <LinearLayout
        android:layout_weight=".5"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_gravity="center"
        android:id="@+id/search_factors_layout"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_120sdp"
        android:adjustViewBounds="true"
        android:background="@drawable/back3"
        android:orientation="vertical"
        android:scaleType="fitCenter"
        >


        <ImageView
            android:id="@+id/over_view_factorsImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:scaleType="fitCenter"

            android:src="@drawable/search_engine" />

        <com.example.shaymaa.finalproject.others.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/serch_factort"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>



    <LinearLayout
        android:id="@+id/add_new_factory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/back4"
         android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="12dp"
       >


        <ImageView
            android:id="@+id/imageRegistration"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:src="@drawable/factory"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <com.example.shaymaa.finalproject.others.MyTextView
            android:layout_width="match_parent"
            android:textSize="20sp"
             android:textAlignment="center"
            android:padding="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text= "@string/add_factory"
            />

    </LinearLayout>
</LinearLayout>